examples/test/testpolicy3224.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3224
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key10: value12
      key21: value7
      key44: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value29
          key31: value34
          key46: value5
      podSelector:
        matchLabels:
          key48: value23
          key35: value38
